--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -3,9 +3,7 @@ layout: default
 ---
 
 <article class="Post">
-  <h2>
-    {{ page.title }}
-  </h2>
+  <h1>{{ page.title }}</h1>
 
   <p class="Post-metadata">
     Published <time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: '%B %d, %Y' }}</time> by <a target="_blank" href="{{ page.author.url }}">{{ page.author.name }}</a>
