--- a/assets/style.css
+++ b/assets/style.css
@@ -136,7 +136,7 @@ aside {
 
 /*********************** Syntax Highlight ***********************/
 
-code.language-plaintext {
+:not(:is(h1, h2, h3, h4, h5, h6)) > code.language-plaintext {
   background: var(--color-code-background);
   border: 1px solid var(--color-primary-text);
   border-radius: 0.15rem;
