--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,38 @@ aside {
   }
 }
 
+/*********************** Tables ***********************/
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1.5rem 0;
+  font-size: 0.9rem;
+  box-shadow: 4px 4px 0 var(--color-primary-text);
+}
+
+th {
+  background: var(--color-primary);
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+th, td {
+  padding: 0.75rem 1rem;
+  border: 2px solid var(--color-primary-text);
+}
+
+tr:nth-child(even) {
+  background-color: var(--color-primary-light);
+}
+
+caption {
+  margin-bottom: 0.5rem;
+  font-style: italic;
+  caption-side: bottom;
+  color: var(--color-primary-text);
+  text-align: center;
+}
 
 /*********************** Syntax Highlight ***********************/
 
