No extension yet

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -12,7 +12,7 @@
       <li><a href="https://github.com/lit-lang/lit/issues" target="_blank">Issue Tracker</a></li>
       <li><a href="https://github.com/lit-lang/lit" target="_blank">Source Code</a></li>
       <li><a href="https://github.com/lit-lang/site" target="_blank">Website Repository</a></li>
-      <li><a href="https://marketplace.visualstudio.com/items?itemName=lit-lang.lit" target="_blank">VS Code Extension</a></li>
+      {% comment %} <li><a href="https://marketplace.visualstudio.com/items?itemName=lit-lang.lit" target="_blank">VS Code Extension</a></li> {% endcomment %}
     </ul>
   </section>
 
