--- a/assets/style.css
+++ b/assets/style.css
@@ -127,6 +127,7 @@ aside {
   box-shadow: 4px 4px 0 var(--color-primary);
   font-size: 1rem;
   padding: 1rem;
+  margin-top: 1rem;
 
   p:first-child {
     margin-top: 0;
